--- a/COMP2084GetMeAGame/Views/Categories/Index.cshtml
+++ b/COMP2084GetMeAGame/Views/Categories/Index.cshtml
@@ -6,7 +6,7 @@
 
 @model IEnumerable<COMP2084GetMeAGame.Models.Category>
 
-<h1>Pick a Category from the below list</h1>
+<h1>Pick a Category</h1>
 
 <ul>
     @foreach (var category in Model)
