--- a/COMP2084GetMeAGame/Views/Home/Index.cshtml
+++ b/COMP2084GetMeAGame/Views/Home/Index.cshtml
@@ -5,4 +5,5 @@
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <p>Product Images from <a href="https://www.ebgames.ca/" target="_blank">EB Games</a>. This website is for education purpose only.</p>
 </div>
