--- a/COMP2084GetMeAGame/Views/Shared/_Layout.cshtml
+++ b/COMP2084GetMeAGame/Views/Shared/_Layout.cshtml
@@ -4,12 +4,13 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] Get Me AGame</title>
+    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto" />
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3">
             <div class="container">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><img width="80" src="~/images/logo.png" alt="Get Me a Game" /></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -44,7 +45,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; GetMeAGame - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; GetMeAGame - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a> | <a href="https://github.com/HrudyaR" target="_blank">View Source Code</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
