--- a/COMP2084GetMeAGame/wwwroot/css/site.css
+++ b/COMP2084GetMeAGame/wwwroot/css/site.css
@@ -61,6 +61,7 @@ html {
 body {
   /* Margin bottom by footer height */
   margin-bottom: 60px;
+  font-family:Roboto;
 }
 .footer {
   position: absolute;
@@ -68,4 +69,12 @@ body {
   width: 100%;
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
+}
+
+.img-thumbnail {
+    width:75px;
+}
+
+.navbar-light {
+    background-color:#e5d70d;
 }
