--- a/COMP2084GetMeAGame/Views/Shared/_Layout.cshtml
+++ b/COMP2084GetMeAGame/Views/Shared/_Layout.cshtml
@@ -21,8 +21,8 @@
                     <partial name="_LoginPartial" />
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Categories" asp-action="Index">Shop Now</a>
-                        @if (User.Identity.IsAuthenticated)
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Shop" asp-action="Index">Shop Now</a>
+                        @if (User.IsInRole("Administrator"))
                         {
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Categories" asp-action="Index">Categories</a>
