facebook authentication and domain verification meta tag

--- a/COMP2084GetMeAGame/Views/Shared/_Layout.cshtml
+++ b/COMP2084GetMeAGame/Views/Shared/_Layout.cshtml
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-site-verification" content="Hpo4-_SHbVNUbT6BJZiLR4oru1DzXT04cOBDl8Z5_gg" />
     <title>@ViewData["Title"] Get Me AGame</title>
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto" />
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
